<resources>
    <string name="app_name">Adclock</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_alarms">You have no alarms</string>
    <string name="no_alarms_add">Add a alarm item +</string>
    <string name="add_alarm">New alarm</string>
    <string name="edit_alarm">Edit alarm</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="repeat">Repeat</string>
    <string name="ringtone">Ringtone</string>
    <string name="vibrate">Vibrate</string>
    <string name="label">Label</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="ringtones">Ringtones</string>
    <string name="sunday_capital">s</string>
    <string name="saturday_capital">s</string>
    <string name="monday_capital">m</string>
    <string name="tuesday_capital">t</string>
    <string name="wednesday_capital">w</string>
    <string name="thursday_capital">t</string>
    <string name="friday_capital">f</string>

    <!-- Alarms Activity start -->
    <string name="default_alarm_title">Alarm</string>
    <string name="alarm_set_for">Alarm set for %1$s from now.</string>
    <string name="from_now_message_with_days">%1$d %4$s, %2$d %5$s and %3$d %6$s</string>
    <string name="from_now_message">%1$d %3$s and %2$d %4$s</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="error_ocurred">Error occurred</string>
    <string name="one_time_alarm_label">One time</string>
    <!-- Alarms Activity end -->

</resources>
