<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addeditalarm.AddEditAlarmActivity">

    <com.github.stephenvinouze.materialnumberpickercore.MaterialNumberPicker
        android:id="@+id/minutesNumberPicker"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:saveEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/amPmNumber"
        app:layout_constraintStart_toEndOf="@+id/hoursNumberPicker"
        app:layout_constraintTop_toTopOf="parent"
        app:mnpEditable="true"
        app:mnpMaxValue="59"
        app:mnpMinValue="0"
        app:mnpSeparatorColor="@color/colorAccent"
        app:mnpTextColor="@color/colorPrimary"
        app:mnpTextSize="16sp"
        app:mnpTextStyle="bold"
        app:mnpValue="10"
        app:mnpWrapped="false" />

    <com.github.stephenvinouze.materialnumberpickercore.MaterialNumberPicker
        android:id="@+id/hoursNumberPicker"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:saveEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/ll_settings_items"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:mnpEditable="true"
        app:mnpMaxValue="12"
        app:mnpMinValue="1"
        app:mnpSeparatorColor="@color/colorAccent"
        app:mnpTextColor="@color/colorPrimary"
        app:mnpTextSize="16sp"
        app:mnpTextStyle="bold"
        app:mnpValue="10"
        app:mnpWrapped="false" />

    <com.github.stephenvinouze.materialnumberpickercore.MaterialNumberPicker
        android:id="@+id/amPmNumber"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:saveEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/days"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:mnpEditable="false"
        app:mnpMaxValue="1"
        app:mnpMinValue="0"
        app:mnpSeparatorColor="@color/colorAccent"
        app:mnpTextColor="@color/colorPrimary"
        app:mnpTextSize="16sp"
        app:mnpTextStyle="bold"
        app:mnpValue="10"
        app:mnpWrapped="false" />

    <LinearLayout
        android:id="@+id/days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ll_settings_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minutesNumberPicker">

        <ToggleButton
            android:id="@+id/day1"
            style="@style/AlarmDayToggle" />

        <ToggleButton
            android:id="@+id/day2"
            style="@style/AlarmDayToggle" />

        <ToggleButton
            android:id="@+id/day3"
            style="@style/AlarmDayToggle" />

        <ToggleButton
            android:id="@+id/day4"
            style="@style/AlarmDayToggle" />

        <ToggleButton
            android:id="@+id/day5"
            style="@style/AlarmDayToggle" />

        <ToggleButton
            android:id="@+id/day6"
            style="@style/AlarmDayToggle" />

        <ToggleButton
            android:id="@+id/day7"
            style="@style/AlarmDayToggle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_settings_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:divider="@drawable/grey_horizontal_line"
        android:orientation="vertical"
        android:showDividers="beginning|end|middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cl_clickable_ringtone_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:minHeight="50dp">

            <TextView
                android:id="@+id/tv_ringtone_row"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center_vertical"
                android:text="@string/ringtone"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_ringtone_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:gravity="center_vertical|center_horizontal"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/tv_ringtone_row"
                app:layout_constraintEnd_toEndOf="@+id/tv_ringtone_row"
                app:layout_constraintHorizontal_bias="0.77"
                app:layout_constraintStart_toStartOf="@+id/tv_ringtone_row"
                app:layout_constraintTop_toTopOf="@+id/tv_ringtone_row"
                app:layout_constraintVertical_bias="0.482" />

            <ImageView
                android:id="@+id/iv_ringtone_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:src="@android:drawable/checkbox_on_background"
                app:layout_constraintBottom_toBottomOf="@+id/tv_ringtone_name"
                app:layout_constraintEnd_toEndOf="@+id/tv_ringtone_row"
                app:layout_constraintHorizontal_bias="0.549"
                app:layout_constraintStart_toEndOf="@+id/tv_ringtone_name"
                app:layout_constraintTop_toTopOf="@+id/tv_ringtone_name"
                app:layout_constraintVertical_bias="0.111" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cl_clickable_vibrate_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:foreground="?selectableItemBackground"
            android:minHeight="50dp">

            <TextView
                android:id="@+id/tv_vibro_title"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center_vertical"
                android:text="@string/vibrate"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sc_vibro_switch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@id/tv_vibro_title"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:theme="@style/SwitchButtonRed"
                app:layout_constraintBottom_toBottomOf="@+id/tv_vibro_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.975"
                app:layout_constraintStart_toStartOf="@+id/tv_vibro_title"
                app:layout_constraintTop_toTopOf="@+id/tv_vibro_title" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cl_clickable_label_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:minHeight="50dp">

            <TextView
                android:id="@+id/tv_label_row"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center_vertical"
                android:text="@string/label"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:gravity="center_vertical|center_horizontal"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_row"
                app:layout_constraintEnd_toEndOf="@+id/tv_label_row"
                app:layout_constraintHorizontal_bias="0.77"
                app:layout_constraintStart_toStartOf="@+id/tv_label_row"
                app:layout_constraintTop_toTopOf="@+id/tv_label_row"
                app:layout_constraintVertical_bias="0.482" />

            <ImageView
                android:id="@+id/iv_arrow_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:src="@android:drawable/checkbox_on_background"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label"
                app:layout_constraintEnd_toEndOf="@+id/tv_label_row"
                app:layout_constraintHorizontal_bias="0.549"
                app:layout_constraintStart_toEndOf="@+id/tv_label"
                app:layout_constraintTop_toTopOf="@+id/tv_label"
                app:layout_constraintVertical_bias="0.111" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.13020833" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="242dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="234dp" />

</android.support.constraint.ConstraintLayout>